--- a/editor/css/main.css
+++ b/editor/css/main.css
@@ -567,6 +567,37 @@ select {
 
 }
 
+.Modal {
+	background: #eee;
+	color: #888;
+	padding: 8px;
+	position: fixed;
+  top: 50%;
+  left: 50%;
+	min-width: 150px;
+  transform: translate(-50%, -50%);
+}
+
+.Modal .Header {
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
+	margin-bottom: 4px;
+}
+
+.Modal .Title {
+	flex-grow: 1;
+}
+
+.Modal .Close {
+	flex-grow: 0;
+}
+
+.Modal .Row {
+	min-height: 20px;
+	margin-bottom: 10px;
+}
+
 /* DARK MODE */
 
 @media ( prefers-color-scheme: dark ) {
@@ -699,4 +730,8 @@ select {
 		background-color: rgba(21,60,94,1);
 	}
 
+	.Modal {
+		background-color: #111;
+		color: #888;
+	}
 }
